feat: add transaction repository

--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	testImplementation 'io.mockk:mockk:1.13.8'
 	testImplementation 'org.assertj:assertj-core:3.24.2'
+	testImplementation 'com.h2database:h2'
 }
 
 kotlin {
